--- a/.github/workflows/checks-and-tests.yaml
+++ b/.github/workflows/checks-and-tests.yaml
@@ -10,6 +10,11 @@ jobs:
     - name: Checkout the source code
       uses: actions/checkout@v3
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
+
     - name: Install & display rust toolchain
       run: rustup show
 
@@ -24,6 +29,11 @@ jobs:
     steps:
     - name: Checkout the source code
       uses: actions/checkout@v3
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
 
     - name: Install & display rust toolchain
       run: rustup show
