--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,6 +15,11 @@ jobs:
       with:
         submodules: true
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
+
     - name: Install & display rust toolchain
       run: rustup show
 
@@ -35,6 +40,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: true
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
 
     - name: Install & display rust toolchain
       run: rustup show
@@ -58,6 +68,11 @@ jobs:
       uses: actions/checkout@v3
       with:
         submodules: true
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
 
     - name: Install & display rust toolchain
       run: rustup show
