--- a/.github/workflows/static-analysis.yaml
+++ b/.github/workflows/static-analysis.yaml
@@ -13,6 +13,11 @@ jobs:
       - name: Install & display rust toolchain
         run: rustup show
 
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v1
+        with:
+          version: '3.x'
+
       - name: Check targets are installed correctly
         run: rustup target list --installed
 
@@ -33,6 +38,11 @@ jobs:
     steps:
     - name: Checkout the source code
       uses: actions/checkout@v3
+
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
+      with:
+        version: '3.x'
 
     - name: Install & display rust toolchain
       run: rustup show
