--- a/contracts/crates/rmrk/Cargo.toml
+++ b/contracts/crates/rmrk/Cargo.toml
@@ -5,15 +5,10 @@ authors = ["Stake Technologies <devops@stake.co.jp>"]
 edition = "2021"
 
 [dependencies]
-ink_env = { version = "3", default-features = false }
-ink_lang = { version = "3", default-features = false }
-ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
-ink_prelude = { version = "3", default-features = false }
-ink_primitives = { version = "3", default-features = false }
-ink_storage = { version = "3", default-features = false }
+ink = { version = "~4.0.0-beta", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
 [lib]
 name = "rmrk_extension"
@@ -23,12 +18,8 @@ crate-type = ["rlib"]
 [features]
 default = ["std"]
 std = [
-	"ink_metadata/std",
-	"ink_env/std",
-	"ink_storage/std",
-	"ink_primitives/std",
+	"ink/std",
 	"scale/std",
 	"scale-info/std",
-	"ink_prelude/std",
 ]
 ink-as-dependency = []
