--- a/contracts/examples/rmrk/Cargo.toml
+++ b/contracts/examples/rmrk/Cargo.toml
@@ -5,15 +5,10 @@ authors = ["[your_name] <[your_email]>"]
 edition = "2021"
 
 [dependencies]
-ink_env = { version = "3", default-features = false }
-ink_lang = { version = "3", default-features = false }
-ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
-ink_prelude = { version = "3", default-features = false }
-ink_primitives = { version = "3", default-features = false }
-ink_storage = { version = "3", default-features = false }
+ink = { version = "~4.0.0-beta", default-features = false }
 
 scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "~2.1.0", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
 
 rmrk_extension = { path = "../../crates/rmrk", default-features = false }
 
@@ -28,13 +23,9 @@ crate-type = [
 [features]
 default = ["std"]
 std = [
-	"ink_metadata/std",
-	"ink_env/std",
-	"ink_storage/std",
-	"ink_primitives/std",
+	"ink/std",
 	"scale/std",
 	"scale-info/std",
 	"rmrk_extension/std",
-	"ink_prelude/std",
 ]
 ink-as-dependency = []
